--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ body::before {
   text-align: center;
   gap: 6vh;
   font-weight: lighter;
-  padding-left: 8vh;
+  padding-left: vh;
 }
 @media screen and (max-width: 576px) {
   .profile-card__info {
