--- a/style.scss
+++ b/style.scss
@@ -74,7 +74,7 @@ body{
         text-align: center;
         gap: 6vh;
         font-weight: lighter;
-        padding-left: 8vh;
+        padding-left: vh;
 
         @media screen and (max-width: 576px) {
             gap: 18px;
